Optimize project structure

--- a/newpage.html
+++ b/newpage.html
@@ -15,7 +15,7 @@
       min-height: 100vh;
       margin: 0;
       padding: 20px;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)), url('1.jpg');
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)), url('public/1.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -110,73 +110,73 @@
     <div class="icons">
       <div class="icon-container">
         <a href="https://github.com/fxy0224" target="_blank">
-          <img src="github.png" alt="Github" class="icon">
+          <img src="public/github.png" alt="Github" class="icon">
         </a>
         <p class="icon-label">Github</p>
       </div>
       <div class="icon-container">
         <a href="https://poe.com/" target="_blank">
-          <img src="chat-gpt.png" alt="poe" class="icon">
+          <img src="public/chat-gpt.png" alt="poe" class="icon">
         </a>
         <p class="icon-label">poe</p>
       </div>
       <div class="icon-container">
         <a href="https://keep.google.com/#home" target="_blank">
-          <img src="google-keep.png" alt="Google Keep" class="icon">
+          <img src="public/google-keep.png" alt="Google Keep" class="icon">
         </a>
         <p class="icon-label">Google Keep</p>
       </div>
       <div class="icon-container">
         <a href="https://weread.qq.com/" target="_blank">
-          <img src="book.png" alt="微信读书" class="icon">
+          <img src="public/book.png" alt="微信读书" class="icon">
         </a>
         <p class="icon-label">微信读书</p>
       </div>
       <div class="icon-container">
         <a href="https://translate.google.com.hk/?hl=zh-C&sl=auto&tl=zh-CN&op=translate" target="_blank">
-          <img src="translate.png" alt="Google Translate" class="icon">
+          <img src="public/translate.png" alt="Google Translate" class="icon">
         </a>
         <p class="icon-label">Google Translate</p>
       </div>
       <div class="icon-container">
         <a href="https://calendar.google.com/calendar/u/0/r/tasks?pli=1" target="_blank">
-          <img src="google-tasks.jpg" alt="Google tasks" class="icon">
+          <img src="public/google-tasks.jpg" alt="Google tasks" class="icon">
         </a>
         <p class="icon-label">Google Tasks</p>
       </div>
       <div class="icon-container">
         <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
-          <img src="gmails.png" alt="GMail" class="icon">
+          <img src="public/gmails.png" alt="GMail" class="icon">
         </a>
         <p class="icon-label">GMail</p>
       </div>
       <div class="icon-container">
         <a href="https://www.youtube.com" target="_blank">
-          <img src="youtube.png" alt="YouTube" class="icon">
+          <img src="public/youtube.png" alt="YouTube" class="icon">
         </a>
         <p class="icon-label">YouTube</p>
       </div>
       <div class="icon-container">
         <a href="https://www.bilibili.com/" target="_blank">
-          <img src="bilibili.jpg" alt="bilibili" class="icon">
+          <img src="public/bilibili.jpg" alt="bilibili" class="icon">
         </a>
         <p class="icon-label">bilibili</p>
       </div>
       <div class="icon-container">
         <a href="https://www.miguvideo.com/" target="_blank">
-          <img src="goal.png" alt="咪咕体育" class="icon">
+          <img src="public/goal.png" alt="咪咕体育" class="icon">
         </a>
         <p class="icon-label">咪咕体育</p>
       </div>
       <div class="icon-container">
         <a href="https://www.wondercv.com/" target="_blank">
-          <img src="cv.png" alt="超级简历" class="icon">
+          <img src="public/cv.png" alt="超级简历" class="icon">
         </a>
         <p class="icon-label">超级简历</p>
       </div>
       <div class="icon-container">
         <a href="https://www.eevpn.com/#/dashboard" target="_blank">
-          <img src="evpn.png" alt="evpn" class="icon">
+          <img src="public/evpn.png" alt="evpn" class="icon">
         </a>
         <p class="icon-label">evpn</p>
       </div>
