--- a/newpage.html
+++ b/newpage.html
@@ -29,26 +29,37 @@
     }
 
     .time-date-container {
-      margin-top: 100px;
+      margin-top: 50px;
       /* 增加顶部边距 */
-      margin-bottom: 32px;
-      background-color: rgba(255, 255, 255, 0.5);
-      padding: 20px;
+      margin-bottom: 20px;
+      background-color: rgba(239, 236, 236, 0.5);
+      padding: 10px;
       border-radius: 10px;
       position: relative;
     }
+    .time-data-picture {
+      display:flex;
+      flex-direction: row;
+      padding: 25px;
+      align-items:flex-end;
+    }
+    .time-data {
+      display:flex;
+      flex-direction: column;
+      padding: 25px;
+    }
 
     #time {
-      font-size: 72px;
+      font-size: 64px;
       font-weight: bold;
       margin-bottom: 8px;
-      color: #343236;
+      color: #050405;
       font-style: italic;
     }
 
     #date {
       font-size: 24px;
-      color: #070606;
+      color: #433e3e;
       font-weight: bold;
       margin-bottom: 16px;
     }
@@ -57,7 +68,7 @@
       font-size: 18px;
       color: #000000;
       margin-top: 20px;
-      text-align: right;
+      text-align: center;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif;
     }
 
@@ -86,7 +97,7 @@
     }
 
     .icon:hover {
-      transform: scale(1.1);
+      transform: scale(1.2);
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     }
 
@@ -101,10 +112,15 @@
 <body>
   <div class="container">
     <div class="time-date-container">
-      <div id="time"></div>
-      <div id="date"></div>
-      <div class="quote">
-        幸福的秘密是自由，自由的秘密是勇敢
+      <div class="time-data-picture">
+        <div class="time-data">
+          <div id="time"></div>
+          <div id="date"></div>
+          <div class="quote">
+            The secret of happiness is freedom, the secret of freedom is courage.
+          </div>
+        </div>
+        <img src="public/debiao.jpg" alt="laofan Image" style="border-radius: 5px; width: 300px; height: auto;">
       </div>
     </div>
     <div class="icons">
